# GoIT_PyWEB_hm13

./: README.md  pyproject.toml
my_finance/: finance_db.sqlite
my_finance/finance_accounting/: admin.py  apps.py  models.py  urls.py  views.py
my_finance/finance_accounting/migrations/: 0001_initial.py
my_finance/finance_accounting/templates/finance_accounting/: add_category.html  add_operation.html  detail.html  index.html
my_finance/my_finance/: settings.py  urls.py
